= CHANGELOG
:issue: link:https://github.com/ysb33r/ivypot-gradle-plugin/issues/

== 0.10 - Roadmap

=== Improvements

* {issue}34[#34] Resolve classifiers and extensions correctly.
* {issue}40[#40] Run repository synchronisation process in separate JVM.
* {issue}41[#41] Allow arbitrary binaries to be cached.

=== Breaking changes

* Not binary compatible with 0.9.

== 0.9

=== Compatibility

* Gradle compatibility tested 5.0 - 5.2.1

=== Breaking changes

* Minimum JDK8 required
* Major rewrite of the internal repository support. Relies less on Gradle less APIs and provides a DSL layer that mimics the Gradle `repository` structure, but is not binary compatible.

=== Compatibility

* Gradle compatibility tested 4.0 - 5.2.1

== 0.8

* {issue}32[#32] - Honour non-transitive dependencies

== 0.7

* {issue}22[#22] - Support Google repositories.

=== Compatibility

* Gradle compatibility tested 4.0 - 4.7

== 0.6

* {issue}28[#28] - Simplify multi-project support

=== Breaking changes

* If `includeBuildScriptDependencies` is set, it will only look for those dependencies in the root project.

=== Compatibility

* Gradle compatibility tested 2.8 - 4.3.1

== 0.5

=== Bugs

* {issue}20[#20] - Unable to create task extending org.ysb33r.gradle.ivypot.OfflineRepositorySync

=== Breaking changes

* Minimum supported version is Gradle 2.8

=== Compatibility

* Gradle compatibility tested 2.8 - 4.2

== 0.4

* {issue}12[#12] - Make default layout 'gradle'.

== 0.3.7

* {issue}11[#11] - Patterns for writing artifacts is now configurable.

== 0.3.6

* {issue}10[#10] - Fixes issues that was suppose to be fixed by {issue}9[#9].
* Compatibility check up to Gradle 2.11

== 0.3.5

* {issue}9[#9] - Cannot use pattern-based Ivy Resolver since Gradle 2.3.

== 0.3.4

* {issue}8[#8] - Transitive dependencies are not copied to local repository.

== 0.3.3 (Avoid this release)

* {issue}7[#7] - When using two `OfflineRepositorySync` tasks, the build fails.

== 0.3.2
